// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`options:linkage 1`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="a"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label text-muted"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              选项x
            </span>
          </span>
        </span>
      </label>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-inline"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-items"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-item"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
            >
              选项1
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-item"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
            >
              选项2
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-item"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
            >
              选项3
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="b"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label text-muted"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              选项y
            </span>
          </span>
        </span>
      </label>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__RadiosControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-inline is-thin"
      >
        <label
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
          data-role="checkbox"
        >
          <input
            type="radio"
          />
          <i>
            <div
              class="radio-icon icon"
            />
          </i>
          <span
            class="text-muted"
          >
            选项a
          </span>
        </label>
        <label
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
          data-role="checkbox"
        >
          <input
            type="radio"
          />
          <i>
            <div
              class="radio-icon icon"
            />
          </i>
          <span
            class="text-muted"
          >
            选项b
          </span>
        </label>
      </div>
    </div>
  </form>
</div>
`;

exports[`options:linkage 2`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="a"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label text-muted"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              选项x
            </span>
          </span>
        </span>
      </label>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-inline"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-items"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-item is-active"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
            >
              选项1
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-item"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
            >
              选项2
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-item"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
            >
              选项3
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="b"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label text-muted"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              选项y
            </span>
          </span>
        </span>
      </label>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__RadiosControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-inline is-thin"
      >
        <label
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--radio--default disabled __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--radio--default--disabled--unchecked"
          data-role="checkbox"
        >
          <input
            disabled=""
            type="radio"
          />
          <i>
            <div
              class="radio-icon icon"
            />
          </i>
          <span
            class="text-muted"
          >
            选项a
          </span>
        </label>
        <label
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
          data-role="checkbox"
        >
          <input
            type="radio"
          />
          <i>
            <div
              class="radio-icon icon"
            />
          </i>
          <span
            class="text-muted"
          >
            选项b
          </span>
        </label>
      </div>
    </div>
  </form>
</div>
`;

exports[`options:linkage 3`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="a"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label text-muted"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              选项x
            </span>
          </span>
        </span>
      </label>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-inline"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-items"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-item"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
            >
              选项1
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-item is-active"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
            >
              选项2
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-item"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
            >
              选项3
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="b"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label text-muted"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              选项y
            </span>
          </span>
        </span>
      </label>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__RadiosControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-inline is-thin"
      >
        <label
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
          data-role="checkbox"
        >
          <input
            type="radio"
          />
          <i>
            <div
              class="radio-icon icon"
            />
          </i>
          <span
            class="text-muted"
          >
            选项a
          </span>
        </label>
      </div>
    </div>
  </form>
</div>
`;

exports[`options:linkage 4`] = `
<div>
  <form
    class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form __PRISMUI_COMPONENT_CLASS_PREFIX__Form--normal"
    novalidate=""
  >
    <input
      style="display: none;"
      type="submit"
    />
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="a"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label text-muted"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              选项x
            </span>
          </span>
        </span>
      </label>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-inline"
      >
        <div
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-items"
        >
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-item"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
            >
              选项1
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-item"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
            >
              选项2
            </div>
          </div>
          <div
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-item is-active"
          >
            <div
              class="__PRISMUI_COMPONENT_CLASS_PREFIX__ListControl-itemLabel"
            >
              选项3
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-item __PRISMUI_COMPONENT_CLASS_PREFIX__Form-item--normal"
      data-amis-name="b"
      data-role="form-item"
    >
      <label
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__Form-label text-muted"
      >
        <span>
          <span
            class="__PRISMUI_COMPONENT_CLASS_PREFIX__TplField fr-view"
          >
            <span>
              选项y
            </span>
          </span>
        </span>
      </label>
      <div
        class="__PRISMUI_COMPONENT_CLASS_PREFIX__RadiosControl __PRISMUI_COMPONENT_CLASS_PREFIX__Form-control is-inline is-thin"
      >
        <label
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
          data-role="checkbox"
        >
          <input
            type="radio"
          />
          <i>
            <div
              class="radio-icon icon"
            />
          </i>
          <span
            class="text-muted"
          >
            选项a
          </span>
        </label>
        <label
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
          data-role="checkbox"
        >
          <input
            type="radio"
          />
          <i>
            <div
              class="radio-icon icon"
            />
          </i>
          <span
            class="text-muted"
          >
            选项b
          </span>
        </label>
        <label
          class="__PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox __PRISMUI_COMPONENT_CLASS_PREFIX__Checkbox--radio--default"
          data-role="checkbox"
        >
          <input
            type="radio"
          />
          <i>
            <div
              class="radio-icon icon"
            />
          </i>
          <span
            class="text-muted"
          >
            选项c
          </span>
        </label>
      </div>
    </div>
  </form>
</div>
`;
